From Daniel -- don't mention curiosity in intro

--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -49,7 +49,7 @@ Within its branch-and-cut procedure, CORELS maintains an upper bound on the maxi
 
 The efficacy of CORELS depends on how much of the search space our bounds allow us to prune. The upper bound on $R$ must thus be as tight as reasonably possible. The bound we maintain throughout the calculation is a minimum of several bounds, that come in three categories. The first category of bounds are those intrinsic to the rules themselves. This category includes bounds stating that each rule must capture sufficient data; if not, the rule list is provably non-optimal. The second type of bound compares an upper bound on the value of $R$ to that of the current best solution. This allows us to exclude parts of the search space that could never be better than our current solution. Finally, our last type of bound is based on comparing incomplete rule lists that capture the same data and pursuing only the more accurate option. This last class of bounds is especially important -- without our use of a novel \textit{symmetry-aware map}, we are unable to solve most problems of reasonable scale. This symmetry-aware map keeps track of the best accuracy for all the permutations of a given incomplete rule list.
 
-We keep track of these bounds using a modified trie, called a \emph{prefix tree}. Each node in the prefix tree represents an individual rule; thus, each path in the tree represents a rule list with the final node in the path contains the metrics about that rule list. This tree structure facilitates the use of multiple different selection algorithms including breadth-first search, a priority queue based on a custom curiosity function, and a stochastic selection process. In addition, we are able to limit the number of nodes in the tree and thereby achieve a way of tuning space-time tradeoffs in a robust manner. This tree structure is a useful way of organizing the generation of rule lists and should be parallelizable.
+We keep track of these bounds using a modified trie, called a \emph{prefix tree}. Each node in the prefix tree represents an individual rule; thus, each path in the tree represents a rule list with the final node in the path contains the metrics about that rule list. This tree structure facilitates the use of multiple different selection algorithms including breadth-first search, a priority queue whose priority metric is customizable, and a stochastic selection process. In addition, we are able to limit the number of nodes in the tree and thereby achieve a way of tuning space-time tradeoffs in a robust manner. This tree structure is a useful way of organizing the generation of rule lists and should be parallelizable.
 
 \begin{arxiv}
 We evaluated CORELS on a number of publicly available datasets and have made code for our algorithm and experiments publicly available. Our metric of success was 10-fold cross validated prediction accuracy on a subset of the data. These datasets involve hundreds of rules and hundreds or thousands of observations. CORELS is generally able to find the optimal rule list in a matter of seconds and certify it within about 10 minutes. We show that we are able to achieve better out-of-sample accuracy on these datasets than the popular greedy algorithms, CART and C5.0.
