From Daniel and Nicholas -- fix broken ref about rule mining

--- a/paper/sections/bounds.tex
+++ b/paper/sections/bounds.tex
@@ -696,7 +696,7 @@ checking it first can accelerate pruning.
 %
 In addition to applying Theorem~\ref{thm:min-capture} in the context of
 constructing rule lists, we can furthermore apply it in the context of
-rule mining~(\S\ref{sec:rule-mining}).
+rule mining~(\S\ref{sec:setup}).
 %
 Specifically, it implies that we should only mine rules with
 normalized support greater than~$\Reg$;
