--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -122,7 +122,7 @@ to those found via other algorithms.
 %
 Figure~\ref{fig:rule-list} shows an optimal rule list learned in one of the folds.
 %
-Figures~\ref{fig:sparsity} and~\ref{fig:frisk-sparsity} show that CORELS
+Figure~\ref{fig:sparsity} show that CORELS
 can learn short rule lists without sacrificing accuracy.
 
 Figure~\ref{fig:objective} illustrates how both the objective and the size of
