Clarify statement about long paper

--- a/paper/sections/framework.tex
+++ b/paper/sections/framework.tex
@@ -311,7 +311,7 @@ the number of observations with the minority label.
 \begin{kdd}
 \footnote{Due to page constraints, we include only a few
 relevant proofs; we present additional theorems and all proofs
-in a long version of this report.}
+in a long version of this report (in preparation).}
 \end{kdd}
 \end{itemize}
 
