Minor edits and relase LOCK

--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -79,11 +79,11 @@ None of the models exhibit significant overfitting.
 Bottom:  %Weapon prediction for the NYCLU stop-and-frisk dataset.
 NYCLU dataset.
 %
-We depict neither RIPPER, which we were unable to execute,
-nor C4.5, which finds models with over~1000 leaves
-and dramatically overfits for all tested parameters.
+Of the models shown, only CART with ${cp = 0.001}$ significantly overfits.
 %
-The other models do not significantly overfit, except for CART with ${cp = 0.001}$.
+We depict neither RIPPER, which we were unable to execute,
+nor C4.5, which finds large models (${>1000}$ leaves)
+and dramatically overfits for all tested parameters.
 }
 \label{fig:sparsity}
 \end{figure}
