From Nicholas -- clarify sentences introducing COMPAS

--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -64,8 +64,8 @@ title={Cost-sensitive and Interpretable Dynamic Treatment Regimes Based on Rule 
  address = {New York, NY, USA}
 }
 @article{LarsonMaKiAn16,
-title={How We Analyzed the COMPAS Recidivism Algorithm},
-author="Jeff Larson, Surya Mattu, Lauren Kirchner and Julia Angwin",
+title={How We Analyzed the {COMPAS} Recidivism Algorithm},
+author="Jeff Larson and Surya Mattu and Lauren Kirchner and Julia Angwin",
 journal={ProPublica},
 year={2016}
 }
