Certificate of optimality is fine

--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -52,7 +52,8 @@ We wondered whether there was indeed no possible transparent model that would su
 Answering that question requires solving a computationally hard problem.
 %
 Namely, we would like to find a transparent model that is optimal
-among a particular pre-determined class of models, and certify its optimality.
+within a particular pre-determined class of models,
+and produce a certificate of optimality.
 %
 This would enable one to say, for this problem and model class,
 with certainty and before resorting to black box methods,
