Revert on stop-and-frisk in intro

--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -97,10 +97,7 @@ We evaluated CORELS on a number of publicly available datasets and have made cod
 With CORELS, we target large (not massive) problems,
 where interpretability and certifiable optimality are important.
 %
-We illustrate the efficacy of our approach on two problems:
-predicting two-year recidivism using the ProPublica COMPAS dataset~\cite{LarsonMaKiAn16},
-and whether a weapon will be found on a stopped individual who is frisked or searched,
-using a 2014 stop-and-frisk dataset from the New York Civil Liberties Union (NYCLU)~\cite{nyclu:2014}.
+We illustrate the efficacy of our approach using the ProPublica COMPAS dataset~\cite{LarsonMaKiAn16}, for predicting two-year recidivism.
 %
 We produce a certifiably optimal, interpretable rule list that achieves
 the same accuracy as a random forest approach, thereby calling into question
