--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -97,7 +97,7 @@ We evaluated CORELS on a number of publicly available datasets and have made cod
 With CORELS, we target large (not massive) problems,
 where interpretability and certifiable optimality are important.
 %
-We illustrate the efficacy of our approach using the ProPublica COMPAS dataset~\cite{LarsonMaKiAn16}, for predicting two-year recidivism.
+We illustrate the efficacy of our approach using the ProPublica COMPAS dataset~\cite{LarsonMaKiAn16}, for the problem of two-year recidivism prediction.
 %
 We produce a certifiably optimal, interpretable rule list that achieves
 the same accuracy as a random forest approach, thereby calling into question
