Write out GLM and SVM

--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -111,7 +111,7 @@ an extensive evaluation contained in a long version of this report (in preparati
 \end{kdd}
 
 We first ran a 10-fold cross validation experiment using CORELS and eight other algorithms:
-GLM, SVM, AdaBoost, CART, C4.5, RF, RIPPER,~\footnote{We use publicly available R implementations, with default parameter settings.} and scalable rule lists (SBRL).~\footnote{https://github.com/Hongyuy/sbrlmod}
+logistic regression, support vector machines, AdaBoost, CART, C4.5, random forests, RIPPER,~\footnote{We use publicly available R implementations, with default parameter settings.} and scalable rule lists (SBRL).~\footnote{https://github.com/Hongyuy/sbrlmod}
 There were no statistically significant differences in the accuracies of the
 algorithms. In fact, the difference between folds was far larger than the difference
 between algorithms. We conclude that CORELS produces models whose accuracy is comparable
