Minor bib edits

--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -1,7 +1,7 @@
 @unpublished{ChenRu17,
 author={Chaofan Chen and Cynthia Rudin},
 title={Optimized Falling Rule Lists and Softly Falling Rule Lists},
-note={work in progress},
+note={Work in progress},
 year={2017}
 }
 
@@ -56,12 +56,12 @@ title={Cost-sensitive and Interpretable Dynamic Treatment Regimes Based on Rule 
 @inproceedings{GarofalakisHyRaSh00,
  author = {Garofalakis, Minos and Hyun, Dongjoon and Rastogi, Rajeev and Shim, Kyuseok},
  title = {Efficient Algorithms for Constructing Decision Trees with Constraints},
- booktitle = {Proceedings of the Sixth ACM SIGKDD International Conference on Knowledge Discovery and Data Mining {(KDD)}},
+ booktitle = {Proceedings of the Sixth ACM SIGKDD International Conference on Knowledge Discovery and Data Mining {(KDD'98)}},
  year = {2000},
  location = {Boston, Massachusetts, USA},
  pages = {335--339},
- publisher = {ACM},
- address = {New York, NY, USA}
+ __publisher = {ACM},
+ __address = {New York, NY, USA}
 }
 @article{LarsonMaKiAn16,
 title={How We Analyzed the {COMPAS} Recidivism Algorithm},
@@ -345,8 +345,10 @@ language={English}
                Russell Greiner and
                Martin Zinkevich},
   title     = {A Fast Way to Produce Optimal Fixed-Depth Decision Trees},
-  booktitle = {International Symposium on Artificial Intelligence and Mathematics
+  __booktitle = {International Symposium on Artificial Intelligence and Mathematics
                {(ISAIM} 2008), Fort Lauderdale, Florida, USA, January 2-4, 2008},
+  booktitle = {International Symposium on Artificial Intelligence and Mathematics
+               {(ISAIM} 2008)},
   year      = {2008}
 }
 %http://isaim2008.unl.edu/PAPERS/TechnicalProgram/ISAIM2008_0022_afd88e29a0a4ff36741f4d8e4eb84a69.pdf
@@ -387,7 +389,7 @@ year={2015}
 @inproceedings{GohRu14,
 author={Siong Thye Goh and Cynthia Rudin},
 title={Box Drawings for Learning with Imbalanced Data}, 
-booktitle={Proceedings of the 20th ACM SIGKDD Conference on Knowledge Discovery and Data Mining {(KDD)}},
+booktitle={Proceedings of the 20th ACM SIGKDD Conference on Knowledge Discovery and Data Mining {(KDD'14)}},
 year={2014}
 } 
 
@@ -462,8 +464,8 @@ isbn={978-3-211-82910-3},
 booktitle={Learning, Networks and Statistics},
 volume={382},
 series={International Centre for Mechanical Sciences},
-editor={Della Riccia, Giacomo and Lenz, Hans-Joachim and Kruse, Rudolf},
-title={Machine learning: between accuracy and interpretability},
+__editor={Della Riccia, Giacomo and Lenz, Hans-Joachim and Kruse, Rudolf},
+title={Machine learning: {B}etween accuracy and interpretability},
 publisher={Springer Vienna},
 author={Bratko, I.},
 pages={163-177},
@@ -579,7 +581,7 @@ year={2013}
 
 
 @article{Chipman:1998jh,
-author = {Chipman, Hugh A and George, Edward I and McCulloch, Robert E},
+author = {Chipman, Hugh A. and George, Edward I. and McCulloch, Robert E.},
 title = {Bayesian {CART} model search},
 journal = {Journal of the American Statistical Association},
 year = {1998},
@@ -618,7 +620,7 @@ pages = {363--377}
 
 
 @article{Chipman:2002hc,
-author = {Chipman, Hugh A and George, Edward I and McCulloch, Robert E},
+author = {Chipman, Hugh A. and George, Edward I. and McCulloch, Robert E.},
 title = {Bayesian treed models},
 journal = {Machine Learning},
 year = {2002},
