Minor caption edits

--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -258,14 +258,14 @@ prefixes of a given length in the queue during the algorithm's execution.
 \caption{Queue composition. % logical queue
 %
 Numbers of prefixes in the queue (log scale), colored by length,
-as a function of wall clock time (log scale),
-for CORELS (top left), and without the permutation map (top right),
-lookahead bound (bottom left), and equivalent points bound (bottom right).
+as a function of wall clock time (log scale), for CORELS (top left),
+and without three specific implementation optimizations or bounds.
+%the permutation map (top right),
+%lookahead bound (bottom left), and equivalent points bound (bottom right).
 %
 The gray shading fills in the area beneath the total number of
 queue elements for CORELS.
-%\ie the sum over prefixes of lengths~0
-%through~4 in the top left figure.
+\ie the sum over all lengths in the top left figure.
 %
 For comparison, we replicate the same gray region
 in the other three subfigures.
