--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -94,14 +94,19 @@ This tree structure facilitates the use of multiple different selection algorith
 We evaluated CORELS on a number of publicly available datasets and have made code for our algorithm and experiments publicly available. Our metric of success was 10-fold cross validated prediction accuracy on a subset of the data. These datasets involve hundreds of rules and hundreds or thousands of observations. CORELS is generally able to find the optimal rule list in a matter of seconds and certify it within about 10 minutes. We show that we are able to achieve better out-of-sample accuracy on these datasets than the popular greedy algorithms, CART and C5.0.
 \end{arxiv}
 
-With CORELS, we target large (not massive) problems,
+CORELS targets large (not massive) problems,
 where interpretability and certifiable optimality are important.
 %
-We illustrate the efficacy of our approach using the ProPublica COMPAS dataset~\cite{LarsonMaKiAn16}, for the problem of two-year recidivism prediction.
+We illustrate the efficacy of our approach using (1)~the ProPublica COMPAS dataset~\cite{LarsonMaKiAn16}, for the problem of two-year recidivism prediction,
+and (2)~the New York Civil Liberties Union (NYCLU) 2014 stop-and-frisk
+dataset~\cite{nyclu:2014}, to predict whether a weapon will be found
+on a stopped individual who is frisked or searched.
 %
-We produce a certifiably optimal, interpretable rule list that achieves
-the same accuracy as a random forest approach, thereby calling into question
-the need for use of a proprietary, black box algorithm for recidivism prediction.
+We produce certifiably optimal, interpretable rule lists that achieve
+the same accuracy as approaches like random forests.
+%
+This calls into question the need for use of a proprietary,
+black box algorithm for recidivism prediction.
 
 %\bibliographystyle{abbrvnat}
 %\bibliography{refs}
