--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -59,9 +59,8 @@ This would enable one to say, for this problem and model class,
 with certainty and before resorting to black box methods,
 whether there exists a transparent model.
 
-To that end, we consider the class of rule lists created from pre-mined frequent itemsets.
-%
-The rule list must be assembled from these itemsets to minimize a regularized risk function,~$R$.
+To that end, we consider the class of rule lists assembled from pre-mined frequent itemsets,
+and search for an optimal rule list that minimizes a regularized risk function,~$R$.
 %
 This is a hard discrete optimization problem.
 %
@@ -73,7 +72,10 @@ However, this is a worst case bound that is not realized in practical settings.
 For realistic cases, it is possible to solve fairly large cases of this problem to optimality,
 with the careful use of algorithms, data structures, and implementation techniques.
 
-We develop specialized tools from the field of discrete optimization and artificial intelligence, and in particular, a special branch-and-cut algorithm, called  Certifiably Optimal RulE ListS (CORELS), that provides (1) the optimal solution, (2) a certficiate of optimality and (3) a collection of near-optimal solutions and the distance between each such solution and the optimal one. The certificate of optimality means that we can investigate how close other models (e.g., models provided by greedy algorithms) are to optimal. In particular, we can investigate if the rule lists from probabilistic approaches are nearly optimal or whether those approaches sacrifice too much accuracy in the interest of speed.
+We develop specialized tools from the field of discrete optimization and artificial intelligence, and in particular, a special branch-and-cut algorithm, called  Certifiably Optimal RulE ListS (CORELS), that provides
+(1) the optimal solution, (2) a certficiate of optimality and (3) optionally,
+a collection of near-optimal solutions and the distance between each such solution and the optimal one.
+The certificate of optimality means that we can investigate how close other models (e.g., models provided by greedy algorithms) are to optimal. In particular, we can investigate if the rule lists from probabilistic approaches are nearly optimal or whether those approaches sacrifice too much accuracy in the interest of speed.
 
 \begin{arxiv}
 Within its branch-and-cut procedure, CORELS maintains an upper bound on the maximum value of $R$ that each incomplete rule list can achieve. This allows it to prune an incomplete rule list (and every possible extension) if the bound is worse than the accuracy of the best rule list that we've already looked at. The use of careful bounding techniques leads to massive pruning of the search space of potential rule lists. We continue to consider incomplete and complete rule lists until we have either examined or eliminated every rule list from consideration. Thus, we terminate with the optimal rule list, the close-to-optimal rule lists, and a certificate of optimality.
