From Nicholas -- deawkwardify the rule mining parapgraph

--- a/paper/sections/framework.tex
+++ b/paper/sections/framework.tex
@@ -217,11 +217,12 @@ not captured by~$\Prefix$.
 In the remainder of our presentation, whenever we refer to a rule list with a
 particular prefix, we implicitly assume these empirically determined label predictions.
 
-Finally, we note that our approach to rule mining
-follows the methodology taken by~\citet{LethamRuMcMa15} and~\citet{YangRuSe16}.
+Finally, we note that our approach leverages pre-mined rules,
+following the methodology taken by~\citet{LethamRuMcMa15} and~\citet{YangRuSe16}.
 %
-One of the results we prove later implies a constraint on the rules
-we need to generate -- they must have at least some minimum support
+One of the results we prove later implies a constraint
+that can be used as a filter during rule mining --
+they must have at least some minimum support
 given by the lower bound in Theorem~\ref{thm:min-capture}.
 
 \begin{arxiv}
