From Nicholas -- add sentence about bounds in implementation

--- a/paper/sections/implementation.tex
+++ b/paper/sections/implementation.tex
@@ -60,6 +60,8 @@ current minimum objective.
 If the lower bound is greater than the minimum objective,
 then extension of this rule list could possibly be optimal,
 therefore we do not insert the new rule list into the tree or queue.
+We also leverage our other bounds from~\S\ref{sec:setup}
+to aggressively prune the search space.
 
 Each time we update the minimum objective, we garbage collect the trie, by walking it
 from the root to the leaves, deleting all subtrees of any node with lower bound larger than the current
@@ -67,6 +69,10 @@ minimum objective. If we encounter a node with no children, we prune upwards--de
 node and recursively traversing the tree towards the root, deleting any childless nodes.
 This garbage collection allows us to constrain the trie's memory consumption, though in our
 experiments we observe the minimum objective to decrease only a small number of times.
+
+\begin{kdd}
+\vspace{-1mm}
+\end{kdd}
 
 %\section{Implementation architecture}
 %
