--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -52,14 +52,14 @@ We wondered whether there was indeed no possible transparent model that would su
 Answering that question requires solving a computationally hard problem.
 %
 Namely, we would like to find a transparent model that is optimal
-within a particular pre-determined class of models,
-and produce a certificate of optimality.
+within a particular pre-determined class of models
+and produce a certificate of its optimality.
 %
 This would enable one to say, for this problem and model class,
 with certainty and before resorting to black box methods,
 whether there exists a transparent model.
 
-To that end, we consider the class of rule lists assembled from pre-mined frequent itemsets,
+To that end, we consider the class of rule lists assembled from pre-mined frequent itemsets
 and search for an optimal rule list that minimizes a regularized risk function,~$R$.
 %
 This is a hard discrete optimization problem.
@@ -105,7 +105,7 @@ dataset~\cite{nyclu:2014}, to predict whether a weapon will be found
 on a stopped individual who is frisked or searched.
 %
 We produce certifiably optimal, interpretable rule lists that achieve
-the same accuracy as approaches like random forests.
+the same accuracy as approaches such as random forests.
 %
 This calls into question the need for use of a proprietary,
 black box algorithm for recidivism prediction.
