--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -202,10 +202,10 @@ component & (min) & (s) & ($\times 10^6$) & ($\times 10^6$) & \\
 none (CORELS) & 5.5 (1.6) & 8 (2) & 1.7 (0.4) & 1.3 (0.4) & 5-6 \\
 priority queue & 6.7 (2.2) & 4 (1) & 1.9 (0.6) & 1.5 (0.5) & 5-6 \\
 support bounds & 10.2 (3.4) & 13 (4) & 2.7 (0.8) & 2.2 (0.7) & 5-6 \\
-permutation map & 58.6 (23.3) & 23 (6) & 16.0 (5.9) & 14.5 (5.7) & 5-6 \\
+symmetry-aware map & 58.6 (23.3) & 23 (6) & 16.0 (5.9) & 14.5 (5.7) & 5-6 \\
 lookahead bound & 71.9 (23.0) & 9 (2) & 18.5 (5.9) & 16.3 (5.3) & 6-7 \\
 %equiv. pts. bound & 188.6 (104.6) & 6178 (1840) & 803.8 (0.1) & 790.5 (0.4) & 10-10
-equiv. pts. bound & $>$134 & $>$7168* & $>$800 & $>$789 & $\ge$10
+equivalent point bound & $>$134 & $>$7168* & $>$800 & $>$789 & $\ge$10
 \end{tabular}
 }
 \vspace{5mm}
@@ -257,10 +257,10 @@ prefixes of a given length in the queue during the algorithm's execution.
 \end{center}
 \caption{Queue composition. % logical queue
 %
-Numbers of prefixes in the queue (log scale), colored by length,
+Numbers of prefixes in the queue (log scale), labeled and colored by length,
 as a function of wall clock time (log scale), for CORELS (top left),
 and without three specific implementation optimizations or bounds.
-%the permutation map (top right),
+%the permutation bounds (top right),
 %lookahead bound (bottom left), and equivalent points bound (bottom right).
 %
 The gray shading fills in the area beneath the total number of
