--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -205,7 +205,7 @@ support bounds & 10.2 (3.4) & 13 (4) & 2.7 (0.8) & 2.2 (0.7) & 5-6 \\
 symmetry-aware map & 58.6 (23.3) & 23 (6) & 16.0 (5.9) & 14.5 (5.7) & 5-6 \\
 lookahead bound & 71.9 (23.0) & 9 (2) & 18.5 (5.9) & 16.3 (5.3) & 6-7 \\
 %equiv. pts. bound & 188.6 (104.6) & 6178 (1840) & 803.8 (0.1) & 790.5 (0.4) & 10-10
-equivalent point bound & $>$134 & $>$7168* & $>$800 & $>$789 & $\ge$10
+equivalent pts bound & $>$134 & $>$7168* & $>$800 & $>$789 & $\ge$10
 \end{tabular}
 }
 \vspace{5mm}
