Let's not say branch-and-bound

--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -72,7 +72,7 @@ However, this is a worst case bound that is not realized in practical settings.
 For realistic cases, it is possible to solve fairly large cases of this problem to optimality,
 with the careful use of algorithms, data structures, and implementation techniques.
 
-We develop specialized tools from the field of discrete optimization and artificial intelligence, and in particular, a special branch-and-cut algorithm, called  Certifiably Optimal RulE ListS (CORELS), that provides
+We develop specialized tools from the field of discrete optimization and artificial intelligence, and in particular, a special branch-and-bound algorithm, called  Certifiably Optimal RulE ListS (CORELS), that provides
 (1) the optimal solution, (2) a certficiate of optimality and (3) optionally,
 a collection of near-optimal solutions and the distance between each such solution and the optimal one.
 The certificate of optimality means that we can investigate how close other models (e.g., models provided by greedy algorithms) are to optimal. In particular, we can investigate if the rule lists from probabilistic approaches are nearly optimal or whether those approaches sacrifice too much accuracy in the interest of speed.
